--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar1"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="49dp"
         android:background="@android:color/holo_blue_light"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+
+        <TextView
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:padding="4dp"
+            android:text="Xdule"
+            android:textSize="30sp"
+
+            app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
+            app:layout_constraintTop_toTopOf="@+id/toolbar1"
+            tools:layout_editor_absoluteX="0dp"></TextView>
+
+
+
+    </Toolbar>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -24,16 +41,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
         app:layout_constraintVertical_bias="0.0">
-<androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <WebView
-        android:id="@+id/webview1"
-        android:layout_width="411dp"
-        android:layout_height="match_parent" /></androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <WebView
+                android:id="@+id/webview1"
+                android:layout_width="411dp"
+                android:layout_height="match_parent" />
+        </androidx.cardview.widget.CardView>
     </HorizontalScrollView>
 
     <EditText
@@ -46,7 +65,21 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar1" />
+
+
+    <AutoCompleteTextView
+        android:id="@+id/atv1"
+        android:layout_width="261dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="28dp"
+        android:hint="Day"
+        app:layout_constraintBottom_toTopOf="@+id/button1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edittext1"
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <Button
         android:id="@+id/button1"
@@ -59,7 +92,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittext1"
-        app:layout_constraintVertical_bias="0.168" />
+        app:layout_constraintVertical_bias="0.485" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
