--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:background="@android:color/holo_blue_light"
+        android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,71 +28,61 @@
 
             app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
             app:layout_constraintTop_toTopOf="@+id/toolbar1"
-            tools:layout_editor_absoluteX="0dp"></TextView>
+            tools:layout_editor_absoluteX="0dp">
 
+        </TextView>
+        <ImageButton
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:id="@+id/setting1"
+            android:layout_gravity="right"
+            android:src="@drawable/baseline_settings_24"
+            android:background="@android:color/transparent">
 
-
+        </ImageButton>
     </Toolbar>
 
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        app:layout_constraintBottom_toTopOf="@+id/edittext1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
-        app:layout_constraintVertical_bias="0.0">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <WebView
-                android:id="@+id/webview1"
-                android:layout_width="411dp"
-                android:layout_height="match_parent" />
-        </androidx.cardview.widget.CardView>
-    </HorizontalScrollView>
 
     <EditText
         android:id="@+id/edittext1"
         android:layout_width="261dp"
         android:layout_height="65dp"
-        android:layout_marginTop="300dp"
         android:hint="Enter your group number"
         android:inputType="text"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar1" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285" />
 
-
-    <AutoCompleteTextView
+    <MultiAutoCompleteTextView
         android:id="@+id/atv1"
         android:layout_width="261dp"
         android:layout_height="65dp"
-        android:layout_marginTop="28dp"
-        android:hint="Day"
-        app:layout_constraintBottom_toTopOf="@+id/button1"
+        android:layout_marginBottom="36dp"
+        android:hint="Enter Day"
+        app:layout_constraintBottom_toTopOf="@+id/edittext1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext1"
-        app:layout_constraintVertical_bias="0.0"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar1"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button1"
         android:layout_width="206dp"
         android:layout_height="70dp"
-        android:background="@color/black"
+        android:layout_marginBottom="132dp"
         android:text="check"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edittext1"
-        app:layout_constraintVertical_bias="0.485" />
+        app:layout_constraintVertical_bias="0.507" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
