--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:background="@color/black"
+        android:background="@color/blueuse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,26 +25,29 @@
             android:padding="4dp"
             android:text="Xdule"
             android:textSize="30sp"
-
             app:layout_constraintBottom_toBottomOf="@+id/toolbar1"
             app:layout_constraintTop_toTopOf="@+id/toolbar1"
             tools:layout_editor_absoluteX="0dp">
 
         </TextView>
+
         <ImageButton
+            android:id="@+id/setting1"
             android:layout_width="70dp"
             android:layout_height="match_parent"
-            android:id="@+id/setting1"
             android:layout_gravity="right"
+            android:background="@android:color/transparent"
+            android:onClick="activitysettings"
             android:src="@drawable/baseline_settings_24"
-            android:background="@android:color/transparent">
+            tools:ignore="SpeakableTextPresentCheck"
+            tools:layout_editor_absoluteX="341dp">
 
         </ImageButton>
     </Toolbar>
 
 
-    <EditText
-        android:id="@+id/edittext1"
+    <AutoCompleteTextView
+        android:id="@+id/atv2"
         android:layout_width="261dp"
         android:layout_height="65dp"
         android:hint="Enter your group number"
@@ -56,33 +59,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.285" />
 
-    <MultiAutoCompleteTextView
+    <AutoCompleteTextView
         android:id="@+id/atv1"
         android:layout_width="261dp"
         android:layout_height="65dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginTop="28dp"
         android:hint="Enter Day"
-        app:layout_constraintBottom_toTopOf="@+id/edittext1"
+        app:layout_constraintBottom_toTopOf="@+id/atv2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar1"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.437" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button1"
         android:layout_width="206dp"
         android:layout_height="70dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginBottom="260dp"
+        android:background="@color/blueuse"
         android:text="check"
-        android:textSize="20sp"
         android:textColor="@color/white"
-        android:background="@color/black"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext1"
-        app:layout_constraintVertical_bias="0.507" />
+
+        app:layout_constraintTop_toBottomOf="@+id/atv2"
+        app:layout_constraintVertical_bias="0.26" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
