--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,19 +11,21 @@
         android:id="@+id/toolbar2"
         android:layout_width="match_parent"
         android:layout_height="49dp"
-        android:background="@color/black"
+        android:background="@color/blueuse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/imgbutton2"
+            android:id="@+id/imgbutton21"
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:background="@color/black"
-            android:src="@drawable/baseline_arrow_back_24"></ImageButton>
+            android:background="@color/blueuse"
+            android:src="@drawable/baseline_arrow_back_24"
+            tools:ignore="ContentDescription,SpeakableTextPresentCheck"
+            tools:layout_editor_absoluteX="16dp"></ImageButton>
 
         <TextView
             android:layout_width="200dp"
@@ -43,7 +45,7 @@
         android:layout_marginTop="20dp"
         android:drawableLeft="@drawable/baseline_download_24"
         android:text="Download All Schedule "
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,6 +61,7 @@
         android:drawableLeft="@drawable/baseline_volume_up_24"
         android:text="Sound settings"
         android:textSize="20sp"
+        android:textColor="@color/white"
         app:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -73,7 +76,7 @@
         android:layout_marginTop="20dp"
         android:drawableLeft="@drawable/baseline_brightness_5_24"
         android:text="Adjust Brightness"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
 
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +98,8 @@
         app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button14"
-        app:layout_constraintVertical_bias="0.16" />
+        app:layout_constraintVertical_bias="0.16"
+        android:textColor="@color/white"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
