--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,18 +75,31 @@
         android:id="@+id/button1"
         android:layout_width="206dp"
         android:layout_height="70dp"
-        android:layout_marginBottom="260dp"
+        android:layout_marginTop="40dp"
         android:background="@color/blueuse"
         android:text="check"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@+id/atv2"
-        app:layout_constraintVertical_bias="0.26" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/atv2" />
+
+    <TextView
+        android:id="@+id/resultgrid"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="68dp"
+        android:hint="Text will appear hear"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button1"
+        app:layout_constraintVertical_bias="0.0"
+        android:textSize="25sp"
+        android:textColor="@color/black"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
